# bezierfun

./: BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  main.cpp
res/: fragment.shader  vertex.shader
util/: FileUtil.h  MathUtil.cpp  MathUtil.h  RenderUtil.cpp  RenderUtil.h
